reorganize plots and add strawman books

--- a/plot/plotting/addon_grid_spine_layout.ipynb
+++ b/plot/plotting/addon_grid_spine_layout.ipynb
@@ -41,48 +41,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a677a7dd",
+   "id": "9ba3c4f6",
    "metadata": {},
    "source": [
-    "### locator, formatter"
+    "### title, legend, grid, spines, layout\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4a976e",
+   "id": "d4a5ea86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.yaxis.set_major_locator(mpl.ticker.MaxNLocator(nbins=5))\n",
-    "ax.yaxis.set_major_formatter(mpl.ticker.PercentFormatter(1.0, decimals=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "787e1b7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# axis formatting\n",
-    "ax.set_xlabel(\"Date\")\n",
-    "ax.xaxis.set_major_locator(mpl.dates.YearLocator())\n",
-    "ax.xaxis.set_major_formatter(mpl.dates.DateFormatter(\"%Y-%m-%d\"))\n",
-    "ax.xaxis.set_minor_locator(mpl.ticker.AutoMinorLocator(2))\n",
-    "ax.tick_params(\"x\", rotation=45)\n",
-    "\n",
-    "ax.set_ylabel(\"Counts\")\n",
-    "ax.yaxis.set_major_locator(mpl.ticker.MultipleLocator(100))\n",
-    "ax.yaxis.set_minor_locator(mpl.ticker.AutoMinorLocator(2))\n",
-    "\n",
+    "ax.set_title(f\"Passenger by time\", fontsize=15, fontweight=\"bold\")\n",
+    "ax.legend(loc=\"upper left\", fontsize=10, frameon=False)\n",
+    "ax.grid(True, linestyle=\"--\", alpha=0.5)\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "plt.tight_layout()\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1440df25",
+   "id": "f4051ef1",
    "metadata": {},
    "outputs": [],
    "source": []
