--- a/plot/mpl_notes/contents/transition_matrix.ipynb
+++ b/plot/mpl_notes/contents/transition_matrix.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "06c261f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylibs.transition_matrix import *"
+    "from transition_matrix import *"
    ]
   },
   {
