change plot tm module names

--- a/plot_related/mpl_notes/contents/transition_matrix.ipynb
+++ b/plot_related/mpl_notes/contents/transition_matrix.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transition_matrix import *"
+    "from transition_matrix_plotting_funcs import *"
    ]
   },
   {
