--- a/plot_related/mpl_notes/contents/histogram.ipynb
+++ b/plot_related/mpl_notes/contents/histogram.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylibs.histo_funcs import *"
+    "from histogram_plotting_funcs import *"
    ]
   },
   {
