move data into module

--- a/plot_related/mpl_notes/contents/bars_barhs_dodge.ipynb
+++ b/plot_related/mpl_notes/contents/bars_barhs_dodge.ipynb
@@ -15,7 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "id": "13146482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from get_data.get_data import get_titanic_summary_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "6f46f026",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b6462f0c",
    "metadata": {},
    "outputs": [],
@@ -57,47 +67,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a00dca2e",
+   "id": "c2d199b6",
    "metadata": {},
    "source": [
-    "### set up data"
+    "### data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1f26b3f4",
+   "execution_count": 10,
+   "id": "c42606fd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(891, 15)\n",
       "   survived  pclass     sex   age  sibsp  parch     fare embarked  class    who  adult_male deck  embark_town alive  alone\n",
       "0         0       3    male  22.0      1      0   7.2500        S  Third    man        True  NaN  Southampton    no  False\n",
       "1         1       1  female  38.0      1      0  71.2833        C  First  woman       False    C    Cherbourg   yes  False\n",
       "2         1       3  female  26.0      0      0   7.9250        S  Third  woman       False  NaN  Southampton   yes   True\n",
       "3         1       1  female  35.0      1      0  53.1000        S  First  woman       False    C  Southampton   yes  False\n",
-      "4         0       3    male  35.0      0      0   8.0500        S  Third    man        True  NaN  Southampton    no   True\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"data/titanic.csv\")\n",
-    "df.shape\n",
-    "print(df.head().to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "92e41ee0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4         0       3    male  35.0      0      0   8.0500        S  Third    man        True  NaN  Southampton    no   True\n",
       "         age_bin   n  survival_rate  survival_rate_man  survival_rate_woman  survival_rate_child\n",
       "0  (0.419, 14.0]  77       0.584416                NaN                  NaN             0.584416\n",
       "1   (14.0, 19.0]  87       0.390805           0.102041             0.781250             0.666667\n",
@@ -108,22 +100,7 @@
     }
    ],
    "source": [
-    "df[\"age_bin\"] = pd.qcut(df[\"age\"], q=10)\n",
-    "\n",
-    "grp_dict = {\n",
-    "    \"n\": (\"age_bin\", \"size\"),\n",
-    "    \"survival_rate\": (\"survived\", \"mean\"),\n",
-    "}\n",
-    "for who in df[\"who\"].unique():\n",
-    "    grp_dict[f\"survival_rate_{who}\"] = (\n",
-    "        \"survived\",\n",
-    "        lambda x, w=who: df.loc[x.index]\n",
-    "        .loc[lambda y: y[\"who\"] == w, \"survived\"]\n",
-    "        .mean(),\n",
-    "    )\n",
-    "\n",
-    "pdf = df.groupby(\"age_bin\", observed=False, as_index=False).agg(**grp_dict)\n",
-    "print(pdf.head().to_string())"
+    "pdf = get_titanic_summary_data()"
    ]
   },
   {
@@ -136,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "783866f3",
    "metadata": {},
    "outputs": [
@@ -177,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "894125e8",
    "metadata": {},
    "outputs": [
@@ -226,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "53567bc7",
    "metadata": {},
    "outputs": [
@@ -256,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "39e246ef",
    "metadata": {},
    "outputs": [
