upd flags docu and minor

--- a/data_related/analysis/05_flags.ipynb
+++ b/data_related/analysis/05_flags.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A column of binary numbers can be treated as bitfields, where each bit acts as a binary flag representing a feature, and bitwise operations with bitmasks allow efficient querying and manipulation of these flags for analysis."
+    "```text\n",
+    "A column of binary numbers can be treated as bitfields, \n",
+    "where each bit acts as a binary flag representing a feature, \n",
+    "and bitwise operations with bitmasks allow efficient querying and manipulation of these flags for analysis.\n",
+    "```"
    ]
   },
   {
@@ -78,6 +82,23 @@
     "df = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define mapping\n",
+    "from enum import IntFlag\n",
+    "\n",
+    "\n",
+    "class Flags(IntFlag):\n",
+    "    HAS_SURVIVED = 1 << 0\n",
+    "    IS_ALONE = 1 << 1\n",
+    "    IS_MALE = 1 << 2\n",
+    "    AGE_BELOW_18 = 1 << 3\n"
    ]
   },
   {
@@ -348,38 +369,6 @@
    "metadata": {},
    "source": [
     "### df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HAS_SURVIVED: 1\n",
-      "IS_ALONE: 2\n",
-      "IS_MALE: 4\n",
-      "AGE_BELOW_18: 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "# define mapping\n",
-    "from enum import IntFlag\n",
-    "\n",
-    "\n",
-    "class Flags(IntFlag):\n",
-    "    HAS_SURVIVED = 1 << 0\n",
-    "    IS_ALONE = 1 << 1\n",
-    "    IS_MALE = 1 << 2\n",
-    "    AGE_BELOW_18 = 1 << 3\n",
-    "\n",
-    "\n",
-    "for flag in Flags:\n",
-    "    print(f\"{flag.name}: {flag.value}\")"
    ]
   },
   {
