comp template sql add nulls last

--- a/data_related/db_related/methods_comparison/template_sql_approach.ipynb
+++ b/data_related/db_related/methods_comparison/template_sql_approach.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "id": "7f9ed729",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
     "        select\n",
     "            a.*,\n",
     "            avg(age) over (partition by who) as avg_age_in_who,\n",
-    "            count(1) over (partition by who order by fare, id asc rows between unbounded preceding and current row) as cumcount_in_who_by_fare,\n",
+    "            count(1) over (partition by who order by fare, id asc nulls last rows between unbounded preceding and current row) as cumcount_in_who_by_fare,\n",
     "            case\n",
     "                {make_bin_expression('fare', bins = bins, tabs = 4)}\n",
     "                end as fare_bin,\n",
