temp sql simplify a little

--- a/data_related/db_related/methods_comparison/template_sql_approach.ipynb
+++ b/data_related/db_related/methods_comparison/template_sql_approach.ipynb
@@ -323,6 +323,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1502b26c",
+   "metadata": {},
+   "source": [
+    "### results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 203,
    "id": "5edc16f2",
@@ -485,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "id": "9f70e749",
    "metadata": {},
    "outputs": [
@@ -1009,18 +1017,13 @@
    ],
    "source": [
     "qry = f\"\"\"\n",
-    "with x as (\n",
-    "    select\n",
-    "        id,\n",
-    "        who,\n",
-    "        fare,\n",
-    "        cumcount_in_who_by_fare\n",
-    "    from {tbl}_2\n",
-    "    where who = 'child'\n",
-    ")\n",
     "select\n",
-    "    x.*\n",
-    "from x\n",
+    "    id,\n",
+    "    who,\n",
+    "    fare,\n",
+    "    cumcount_in_who_by_fare\n",
+    "from {tbl}_2\n",
+    "where who = 'child'\n",
     "order by fare asc, id asc\n",
     "\"\"\"\n",
     "\n",
@@ -1030,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "id": "537bc5f6",
    "metadata": {},
    "outputs": [
@@ -1554,18 +1557,9 @@
    ],
    "source": [
     "qry = f\"\"\"\n",
-    "with x as (\n",
-    "    select\n",
-    "        fare,\n",
-    "        fare_bin,\n",
-    "        fare_adj,\n",
-    "        fare_adj_bin\n",
-    "    from {tbl}_2\n",
-    "    where fare_bin <> fare_adj_bin\n",
-    ")\n",
-    "select\n",
-    "    x.*\n",
-    "from x\n",
+    "select fare, fare_bin, fare_adj, fare_adj_bin\n",
+    "from {tbl}_2\n",
+    "where fare_bin <> fare_adj_bin\n",
     "\"\"\"\n",
     "\n",
     "df = eng.run(qry)\n",
