--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -40,19 +40,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"import datetime\",\n",
-      "\"\",\n",
-      "\"today_dt = datetime.datetime.now().strftime('%Y%m%d')\",\n",
-      "\"today_dt\",\n"
+      "\".groupby([''], dropna=False)\",\n",
+      "\".apply(\",\n",
+      "\"    lambda x:pd.Series(np.repeat(x.sort_values('').head(1)[''].values),\",\n",
+      "\"        index=x.sort_values('').index\",\n",
+      "\"    ), include_groups=False\",\n",
+      "\")\",\n",
+      "\".reset_index(level=0, drop=True)\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    "import datetime\n",
-    "\n",
-    "today_dt = datetime.datetime.now().strftime('%Y%m%d')\n",
-    "today_dt\n",
+    ".groupby([''], dropna=False)\n",
+    ".apply(\n",
+    "    lambda x:pd.Series(np.repeat(x.sort_values('').head(1)[''].values),\n",
+    "        index=x.sort_values('').index\n",
+    "    ), include_groups=False\n",
+    ")\n",
+    ".reset_index(level=0, drop=True)\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
