add expansion to template sql

--- a/data_related/db_related/template_approach/template_sql.ipynb
+++ b/data_related/db_related/template_approach/template_sql.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "399dfc68",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "id": "8f6a73e3",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "730aaee0",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
          "type": "string"
         }
        ],
-       "ref": "b524f7ea-67b6-4440-9c26-81716a3e597b",
+       "ref": "e87b90c3-7bf7-4499-8730-230d170e70b8",
        "rows": [
         [
          "0",
@@ -156,7 +156,7 @@
        "0  VERSION  20.00.24.60"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +165,45 @@
     "connection_string = f\"teradatasql://demo_user:{os.environ['password']}@test-l36lujzkc0420a7n.env.clearscape.teradata.com\"\n",
     "eng = alc.create_engine(connection_string)\n",
     "eng.run(f\"select * from dbc.dbcinfo where infokey = 'Version'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fb0fdf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try:\n",
+    "#     eng.run(\"drop table titanic_exp\")\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Table does not exist.\")\n",
+    "\n",
+    "# expansion_qry = \"\"\"\n",
+    "# create table titanic_exp as (\n",
+    "#     with numbers as (\n",
+    "#         select row_number() over (order by (select null)) as n\n",
+    "#         from (\n",
+    "#             select 1 as dummy\n",
+    "#             from titanic a\n",
+    "#             cross join titanic b\n",
+    "#             cross join titanic c\n",
+    "#             cross join titanic d\n",
+    "#             qualify row_number() over (order by (select null)) <= 5\n",
+    "#         ) t\n",
+    "#     )\n",
+    "#     select \n",
+    "#         t.*,\n",
+    "#         n.n as replication_id,\n",
+    "#         (row_number() over (order by (select null))) as new_id\n",
+    "#     from titanic t\n",
+    "#     cross join numbers n\n",
+    "# ) with data;\n",
+    "# \"\"\"\n",
+    "\n",
+    "# _ = eng.run(expansion_qry)\n",
+    "# \n",
+    "# eng.run(\"select count(*) as n from titanic_exp\").iloc[0,0]"
    ]
   },
   {
