add misc snippet

--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -40,25 +40,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\".groupby([''], dropna=False)\",\n",
-      "\".apply(\",\n",
-      "\"    lambda x:pd.Series(np.repeat(x.sort_values('').head(1)[''].values),\",\n",
-      "\"        index=x.sort_values('').index\",\n",
-      "\"    ), include_groups=False\",\n",
-      "\")\",\n",
-      "\".reset_index(level=0, drop=True)\",\n"
+      "\"import seaborn as sns\",\n",
+      "\"df = sns.load_dataset('titanic')\",\n",
+      "\"print(f\\\"{df.shape = }\\\")\",\n",
+      "\"print(df.head().to_string())\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    ".groupby([''], dropna=False)\n",
-    ".apply(\n",
-    "    lambda x:pd.Series(np.repeat(x.sort_values('').head(1)[''].values),\n",
-    "        index=x.sort_values('').index\n",
-    "    ), include_groups=False\n",
-    ")\n",
-    ".reset_index(level=0, drop=True)\n",
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('titanic')\n",
+    "print(f\"{df.shape = }\")\n",
+    "print(df.head().to_string())\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
