add snippet mkflag

--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -40,23 +40,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"import seaborn as sns\",\n",
-      "\"df = sns.load_dataset('titanic')\",\n",
-      "\"print(f\\\"{df.shape = }\\\")\",\n",
-      "\"print(df.head().to_string())\",\n"
+      "\"res[f\\\"is_\\\"] = np.where(res[\\\"\\\"] >= 0, True, np.where(res[\\\"\\\"] < 0, False, np.nan))\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    "import seaborn as sns\n",
-    "df = sns.load_dataset('titanic')\n",
-    "print(f\"{df.shape = }\")\n",
-    "print(df.head().to_string())\n",
+    "res[f\"is_\"] = np.where(res[\"\"] >= 0, True, np.where(res[\"\"] < 0, False, np.nan))\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e677bcae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"res[f\\\"is_\\\"] = np.nan\",\n",
+      "\"res.loc[lambda x: x[\\\"\\\"] >= 0, \\\"is_\\\"] = True\",\n",
+      "\"res.loc[lambda x: x[\\\"\\\"] < 0, \\\"is_\\\"] = False\",\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_str = \"\"\"\n",
+    "res[f\"is_\"] = np.nan\n",
+    "res.loc[lambda x: x[\"\"] >= 0, \"is_\"] = True\n",
+    "res.loc[lambda x: x[\"\"] < 0, \"is_\"] = False\n",
+    "\"\"\"\n",
+    "\n",
+    "print(reformat(func_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6d9561",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
