--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3691f2d0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8e62fa6f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -40,51 +40,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"res[f\\\"is_\\\"] = np.where(res[\\\"\\\"] >= 0, True, np.where(res[\\\"\\\"] < 0, False, np.nan))\",\n"
+      "\".groupby([''], dropna=False, group_keys=False).apply(\",\n",
+      "\"    lambda x: (x - x.mean()) / x.std()\",\n",
+      "\")\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    "res[f\"is_\"] = np.where(res[\"\"] >= 0, True, np.where(res[\"\"] < 0, False, np.nan))\n",
+    ".groupby([''], dropna=False, group_keys=False).apply(\n",
+    "    lambda x: (x - x.mean()) / x.std()\n",
+    ")\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e677bcae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"res[f\\\"is_\\\"] = np.nan\",\n",
-      "\"res.loc[lambda x: x[\\\"\\\"] >= 0, \\\"is_\\\"] = True\",\n",
-      "\"res.loc[lambda x: x[\\\"\\\"] < 0, \\\"is_\\\"] = False\",\n"
-     ]
-    }
-   ],
-   "source": [
-    "func_str = \"\"\"\n",
-    "res[f\"is_\"] = np.nan\n",
-    "res.loc[lambda x: x[\"\"] >= 0, \"is_\"] = True\n",
-    "res.loc[lambda x: x[\"\"] < 0, \"is_\"] = False\n",
-    "\"\"\"\n",
-    "\n",
-    "print(reformat(func_str))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c6d9561",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
