--- a/plot_related/mpl_notes/addons/xticks_locator.ipynb
+++ b/plot_related/mpl_notes/addons/xticks_locator.ipynb
@@ -81,16 +81,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1440df25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list of locators\n",
+    "from matplotlib.ticker import (\n",
+    "    AutoLocator,\n",
+    "    MaxNLocator,\n",
+    "    LinearLocator,\n",
+    "    LogLocator,\n",
+    "    MultipleLocator,\n",
+    "    FixedLocator,\n",
+    "    IndexLocator,\n",
+    "    NullLocator,\n",
+    "    SymmetricalLogLocator,\n",
+    "    AsinhLocator,\n",
+    "    LogitLocator,\n",
+    "    AutoMinorLocator,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a9ae62fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.dates import (\n",
+    "    YearLocator,\n",
+    "    MonthLocator,\n",
+    "    WeekdayLocator,\n",
+    "    DayLocator,\n",
+    "    HourLocator,\n",
+    "    MinuteLocator,\n",
+    "    SecondLocator,\n",
+    "    DateFormatter,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d207e06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a361fb22",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
