--- a/concurrency_related/asyncio_tute/patterns/queue.ipynb
+++ b/concurrency_related/asyncio_tute/patterns/queue.ipynb
@@ -55,7 +55,7 @@
     "    started_at = time.monotonic()\n",
     "\n",
     "    await queue.join()\n",
-    "    for task in tasks\n",
+    "    for task in tasks:\n",
     "        task.cancel()# to cancel infinite tasks, schedule cancelled error to be thrown at next await\n",
     "    await asyncio.gather(*tasks, return_exceptions=True) # wait until all tasks are cancelled\n",
     "\n",
