--- a/concurrency_related/asyncio_tute/docu/98_features_materials.ipynb
+++ b/concurrency_related/asyncio_tute/docu/98_features_materials.ipynb
@@ -12,6 +12,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82b3f3b5",
+   "metadata": {},
+   "source": [
+    "### Coroutine\n",
+    "\n",
+    "- Coroutine function is defined by `async def`, which allows `await`, `async for`, and `async with` to be used within\n",
+    "- Coroutine object is created by running coro function, it can be started, suspended, and resumed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d78115c8",
    "metadata": {},
    "source": [
