upd asyncio docu

--- a/concurrency_related/asyncio_tute/docu/04_await.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_await.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### await\n",
     "\n",
+    "Suspend the execution of coroutine on an awaitable object. Can only be used inside a coroutine function.\n",
+    "\n",
     "- coro\n",
     "    - invoke the coro func content\n",
     "- task\n",
@@ -35,17 +37,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3c86a08b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to plant a tree...\n",
+      "Starting to plant a tree...\n",
+      "Starting to plant a tree...\n",
+      "Tree planted!\n",
+      "Tree planted!\n",
+      "Tree planted!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "async def dig_the_hole():\n",
+    "    await asyncio.sleep(1)\n",
+    "\n",
     "async def plant_a_tree():\n",
+    "    print(\"Starting to plant a tree...\")\n",
     "    dig_the_hole_task = asyncio.create_task(dig_the_hole())\n",
     "    await dig_the_hole_task\n",
     "\n",
     "    # Other instructions associated with planting a tree.\n",
-    "    ..."
+    "    print(\"Tree planted!\")\n",
+    "\n",
+    "await asyncio.gather(\n",
+    "    plant_a_tree(),\n",
+    "    plant_a_tree(),\n",
+    "    plant_a_tree(),\n",
+    ")"
    ]
   },
   {
