aio add gen example

--- a/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "aa5ba83c",
+   "metadata": {},
+   "source": [
+    "### example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24abe7a1",
    "metadata": {},
    "source": [
@@ -83,10 +91,173 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5da3273",
+   "metadata": {},
+   "source": [
+    "### generator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9729eee",
+   "metadata": {},
+   "source": [
+    "coro implemented via generator\n",
+    "\n",
+    "- generator uses yield to pause execution (A), output (B) and receive values (C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f19097bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen():\n",
+    "    received = yield 1 # A\n",
+    "    print(f\"gen received: {received}\")\n",
+    "    received = yield 2\n",
+    "    print(f\"gen received again: {received}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "bbd82331",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object gen at 0x00000226E4CC4E10>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = gen()\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "10245b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['close',\n",
+       " 'gi_code',\n",
+       " 'gi_frame',\n",
+       " 'gi_running',\n",
+       " 'gi_suspended',\n",
+       " 'gi_yieldfrom',\n",
+       " 'send',\n",
+       " 'throw']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in dir(g) if not i.startswith('_')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d2e1e0fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "next(g) = 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"{next(g) = }\") # B\n",
+    "g.gi_frame.f_locals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "24fbbda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gen received: 9\n",
+      "g.send(9) = 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'received': 9}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"{g.send(9) = }\") # C\n",
+    "g.gi_frame.f_locals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e0ab24de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gen received again: 99\n",
+      "Generator has completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    g.send(99)\n",
+    "except StopIteration:\n",
+    "    print(\"Generator has completed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e53ed0f6",
    "metadata": {},
    "source": [
-    "### tie back to event loop"
+    "### tie back to event loop (untested)"
    ]
   },
   {
